--- a/src/ColorForm/ColorForm.module.css
+++ b/src/ColorForm/ColorForm.module.css
@@ -21,6 +21,7 @@ button {
   background: rgb(240, 236, 0);
   color: #222;
   font-size: 1.2rem;
+  font-weight: bold;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 3px;
