--- a/src/ColorForm/ColorForm.module.css
+++ b/src/ColorForm/ColorForm.module.css
@@ -14,7 +14,12 @@ input {
   border-radius: 3px;
   flex-grow: 1;
   font-size: 1.2rem;
-  padding-left: 0.3rem;
+  padding-left: 0.5rem;
+}
+
+input:is(:focus) {
+  outline: 2px solid rgb(32, 0, 90);
+  outline-offset: -4px;
 }
 
 .button {
