--- a/src/ColorCard/ColorCard.module.css
+++ b/src/ColorCard/ColorCard.module.css
@@ -7,7 +7,7 @@
   cursor: pointer;
   border-radius: 3px;
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   display: flex;
   align-items: center;
   position: relative;
