--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,15 @@ body {
 }
 
 .title {
-  margin-top: 0;
   font-size: 2rem;
 }
 
 .section {
+  width: 100%;
+  max-width: 1200px;
   margin-top: 2rem;
-  border: 1px solid red;
+  /* border: 1px solid red; */
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
 }
