--- a/src/ColorForm/ColorForm.module.css
+++ b/src/ColorForm/ColorForm.module.css
@@ -1,5 +1,5 @@
 form {
-  background-color: rgb(32, 0, 90);
+  background-color: rgb(230, 217, 255);
   display: flex;
   justify-content: space-between;
   gap: 2rem;
@@ -23,10 +23,11 @@ input:is(:focus) {
 }
 
 .button {
-  background: rgb(240, 236, 0);
+  background: rgb(230, 217, 255);
   color: #222;
   font-size: 1.2rem;
   font-weight: bold;
+  outline: 2px solid #333;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 3px;
